--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
-    "expo": "^50.0.6",
+    "expo": "^50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-location": "~16.5.3",
+    "expo-notifications": "~0.27.6",
     "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -29,7 +32,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
