--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
-    "expo": "^50.0.7",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3",
-    "expo-location": "~16.5.3",
-    "expo-notifications": "~0.27.6",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
+    "expo-device": "~5.9.4",
+    "expo-location": "~16.5.5",
+    "expo-notifications": "~0.27.7",
     "expo-secure-store": "^12.8.1",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-just-timeline": "^0.0.2",
     "react-native-maps": "1.10.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.6.2",
