--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "kaizen-ride",
     "slug": "kaizen-ride",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/app-icon2.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/app-icon2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,11 +16,11 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.vanvince.kaizen-ride"
+      "bundleIdentifier": "com.vanvince.kaizenride"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/app-icon2.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.vanvince.kaizenride",
@@ -30,10 +30,10 @@
           "apiKey": "AIzaSyCfARqjJgmhmIp2XDWlYnvv63x0rxvLFsA"
         }
       },
-      "versionCode": 1
+      "versionCode": 2
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/app-icon2.png"
     },
     "extra": {
       "eas": {
@@ -57,9 +57,14 @@
             "./assets/action.mp3"
           ]
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Let this app access your photos."
+        }
       ]
-    ]
-
-
+    ],
+    "scheme": "com.vanvince.kaizenride"
   }
 }
