--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "expo": "~50.0.17",
     "expo-constants": "~15.4.6",
     "expo-device": "~5.9.4",
+    "expo-file-system": "~16.0.9",
+    "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
-    "expo-notifications": "~0.27.7",
+    "expo-notifications": "^0.27.7",
     "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "^2.9.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.14.0",
