--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
-    "expo": "~50.0.17",
-    "expo-constants": "~15.4.6",
-    "expo-device": "~5.9.4",
-    "expo-file-system": "~16.0.9",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-notifications": "^0.27.7",
-    "expo-secure-store": "^12.8.1",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "^2.9.4",
+    "expo": "~51.0.0",
+    "expo-constants": "~16.0.1",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.3",
+    "expo-secure-store": "~13.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-just-timeline": "^0.0.2",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.0.0",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
